fix button alignment

--- a/ipar/css/readerStyle.css
+++ b/ipar/css/readerStyle.css
@@ -65,7 +65,6 @@ h2{
 
 .categoryContent img{
 	height: 35px;
-	margin: 15px 0;
 }
 
 .categoryContent img:hover{
@@ -77,8 +76,10 @@ h2{
 }
 
 #exit{
-	float: right;
 	background-color: #15718F;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 
 #add-submission {
